cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_49.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/ofb64ede.c:38: error: DEAD_STORE
  The value written to &dp (type unsigned char*) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/ofb64ede.c:38:5: Write of unused value
36.       dp = (char *)d;
37.       l2c(v0, dp);
38.       l2c(v1, dp);
          ^
39.       while (l--) {
40.           if (n == 0) {
